RMP integration
