# functions/lib/build/swagger.json
@@ -39,8 +39,82 @@
                     "202101",
                     "202105",
                     "202109",
-                    "202201"
+                    "202201",
+                    "202205",
+                    "202209",
+                    "202301",
+                    "202305",
+                    "202309",
+                    "202401"
                 ]
+            },
+            "NestedPreCoRequisites": {
+                "properties": {
+                    "reqList": {
+                        "items": {
+                            "anyOf": [
+                                {
+                                    "$ref": "#/components/schemas/NestedPreCoRequisites"
+                                },
+                                {
+                                    "$ref": "#/components/schemas/KualiCourse"
+                                },
+                                {
+                                    "type": "string"
+                                }
+                            ]
+                        },
+                        "type": "array"
+                    },
+                    "unparsed": {
+                        "type": "string"
+                    },
+                    "gpa": {
+                        "type": "string"
+                    },
+                    "grade": {
+                        "type": "string"
+                    },
+                    "units": {
+                        "type": "boolean"
+                    },
+                    "coreq": {
+                        "type": "boolean"
+                    },
+                    "quantity": {
+                        "anyOf": [
+                            {
+                                "type": "number",
+                                "format": "double"
+                            },
+                            {
+                                "type": "string",
+                                "enum": [
+                                    "ALL"
+                                ]
+                            }
+                        ]
+                    }
+                },
+                "type": "object"
+            },
+            "KualiCourse": {
+                "properties": {
+                    "pid": {
+                        "type": "string"
+                    },
+                    "code": {
+                        "type": "string"
+                    },
+                    "subject": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "code",
+                    "subject"
+                ],
+                "type": "object"
             },
             "CourseDetails": {
                 "properties": {
@@ -51,6 +125,9 @@
                         "type": "string"
                     },
                     "description": {
+                        "type": "string"
+                    },
+                    "dateStart": {
                         "type": "string"
                     },
                     "credits": {
@@ -103,9 +180,6 @@
                         ],
                         "type": "object"
                     },
-                    "dateStart": {
-                        "type": "string"
-                    },
                     "hoursCatalog": {
                         "items": {
                             "properties": {
@@ -125,6 +199,38 @@
                                 "lecture"
                             ],
                             "type": "object"
+                        },
+                        "type": "array"
+                    },
+                    "preAndCorequisites": {
+                        "items": {
+                            "anyOf": [
+                                {
+                                    "type": "string"
+                                },
+                                {
+                                    "$ref": "#/components/schemas/NestedPreCoRequisites"
+                                },
+                                {
+                                    "$ref": "#/components/schemas/KualiCourse"
+                                }
+                            ]
+                        },
+                        "type": "array"
+                    },
+                    "preOrCorequisites": {
+                        "items": {
+                            "anyOf": [
+                                {
+                                    "type": "string"
+                                },
+                                {
+                                    "$ref": "#/components/schemas/NestedPreCoRequisites"
+                                },
+                                {
+                                    "$ref": "#/components/schemas/KualiCourse"
+                                }
+                            ]
                         },
                         "type": "array"
                     },
@@ -148,13 +254,25 @@
                     "pid",
                     "title",
                     "description",
-                    "credits",
                     "dateStart",
+                    "credits",
                     "subject",
                     "code"
                 ],
                 "type": "object",
                 "additionalProperties": false
+            },
+            "EventRequest": {
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    }
+                },
+                "additionalProperties": {},
+                "required": [
+                    "name"
+                ],
+                "type": "object"
             },
             "levelType": {
                 "type": "string",
@@ -174,47 +292,11 @@
                     "lecture topic"
                 ]
             },
-            "MeetingTimes": {
+            "Pick_ClassScheduleListing.Exclude_keyofClassScheduleListing.meetingTimes__": {
                 "properties": {
-                    "type": {
+                    "title": {
                         "type": "string"
                     },
-                    "time": {
-                        "type": "string"
-                    },
-                    "days": {
-                        "type": "string"
-                    },
-                    "where": {
-                        "type": "string"
-                    },
-                    "dateRange": {
-                        "type": "string"
-                    },
-                    "scheduleType": {
-                        "type": "string"
-                    },
-                    "instructors": {
-                        "items": {
-                            "type": "string"
-                        },
-                        "type": "array"
-                    }
-                },
-                "required": [
-                    "type",
-                    "time",
-                    "days",
-                    "where",
-                    "dateRange",
-                    "scheduleType",
-                    "instructors"
-                ],
-                "type": "object",
-                "additionalProperties": false
-            },
-            "ClassScheduleListing": {
-                "properties": {
                     "crn": {
                         "type": "string"
                     },
@@ -275,15 +357,10 @@
                     },
                     "credits": {
                         "type": "string"
-                    },
-                    "meetingTimes": {
-                        "items": {
-                            "$ref": "#/components/schemas/MeetingTimes"
-                        },
-                        "type": "array"
                     }
                 },
                 "required": [
+                    "title",
                     "crn",
                     "sectionCode",
                     "associatedTerm",
@@ -292,14 +369,121 @@
                     "campus",
                     "sectionType",
                     "instructionalMethod",
-                    "credits",
-                    "meetingTimes"
+                    "credits"
                 ],
                 "type": "object",
-                "additionalProperties": false
+                "description": "From T, pick a set of properties whose keys are in the union K"
+            },
+            "Omit_ClassScheduleListing.meetingTimes_": {
+                "$ref": "#/components/schemas/Pick_ClassScheduleListing.Exclude_keyofClassScheduleListing.meetingTimes__",
+                "description": "Construct a type with the properties of T except for those in type K."
+            },
+            "MeetingTimes": {
+                "properties": {
+                    "roomNumber": {
+                        "type": "string"
+                    },
+                    "buildingAbbreviation": {
+                        "type": "string"
+                    },
+                    "building": {
+                        "type": "string"
+                    },
+                    "instructors": {
+                        "items": {
+                            "type": "string"
+                        },
+                        "type": "array"
+                    },
+                    "scheduleType": {
+                        "type": "string"
+                    },
+                    "dateRange": {
+                        "type": "string"
+                    },
+                    "where": {
+                        "type": "string"
+                    },
+                    "days": {
+                        "type": "string"
+                    },
+                    "time": {
+                        "type": "string"
+                    },
+                    "type": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "instructors",
+                    "scheduleType",
+                    "dateRange",
+                    "where",
+                    "days",
+                    "time",
+                    "type"
+                ],
+                "type": "object"
             },
             "Section": {
-                "$ref": "#/components/schemas/ClassScheduleListing"
+                "allOf": [
+                    {
+                        "$ref": "#/components/schemas/Omit_ClassScheduleListing.meetingTimes_"
+                    },
+                    {
+                        "properties": {
+                            "seats": {
+                                "properties": {
+                                    "waitAvailable": {
+                                        "type": "number",
+                                        "format": "double",
+                                        "nullable": true
+                                    },
+                                    "waitCount": {
+                                        "type": "number",
+                                        "format": "double"
+                                    },
+                                    "waitCapacity": {
+                                        "type": "number",
+                                        "format": "double",
+                                        "nullable": true
+                                    },
+                                    "seatsAvailable": {
+                                        "type": "number",
+                                        "format": "double"
+                                    },
+                                    "enrollment": {
+                                        "type": "number",
+                                        "format": "double"
+                                    },
+                                    "maxEnrollment": {
+                                        "type": "number",
+                                        "format": "double"
+                                    }
+                                },
+                                "required": [
+                                    "waitAvailable",
+                                    "waitCount",
+                                    "waitCapacity",
+                                    "seatsAvailable",
+                                    "enrollment",
+                                    "maxEnrollment"
+                                ],
+                                "type": "object"
+                            },
+                            "meetingTimes": {
+                                "items": {
+                                    "$ref": "#/components/schemas/MeetingTimes"
+                                },
+                                "type": "array"
+                            }
+                        },
+                        "required": [
+                            "meetingTimes"
+                        ],
+                        "type": "object"
+                    }
+                ]
             },
             "Seating": {
                 "properties": {
@@ -406,6 +590,9 @@
             },
             "Seat": {
                 "properties": {
+                    "title": {
+                        "type": "string"
+                    },
                     "seats": {
                         "$ref": "#/components/schemas/Seating"
                     },
@@ -420,6 +607,7 @@
                     }
                 },
                 "required": [
+                    "title",
                     "seats",
                     "waitListSeats",
                     "crn"
@@ -490,6 +678,9 @@
                         "type": "string"
                     },
                     "amazonUrl": {
+                        "type": "string"
+                    },
+                    "isbn10": {
                         "type": "string"
                     }
                 },
@@ -824,6 +1015,43 @@
                 ]
             }
         },
+        "/events": {
+            "post": {
+                "operationId": "PostEvent",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean"
+                                        }
+                                    },
+                                    "required": [
+                                        "success"
+                                    ],
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [],
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/EventRequest"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/sections/{term}": {
             "get": {
                 "operationId": "Sections",
@@ -869,6 +1097,15 @@
                         "required": true,
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    {
+                        "in": "query",
+                        "name": "v9",
+                        "required": false,
+                        "schema": {
+                            "default": false,
+                            "type": "boolean"
                         }
                     }
                 ]
@@ -916,6 +1153,38 @@
                     {
                         "in": "query",
                         "name": "code",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ]
+            }
+        },
+        "/sections/prof/rating": {
+            "get": {
+                "operationId": "Rating",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "number",
+                                    "format": "double"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Professor Rating Not Found"
+                    }
+                },
+                "security": [],
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "professor",
                         "required": true,
                         "schema": {
                             "type": "string"
